# F1_Dashboard

./: .gitignore  README.md  WHAT_TO_ADD.md  abu_dhabi_2021.ipynb  analysis.py  db_test.ipynb  docker-compose.yml  guide.txt  pyproject.toml  qatar_2024.ipynb  requirements.txt  verstappen_abudhabi_quali.csv
app/: __init__.py  main.py
app/models/: __init__.py  state.py
app/plots/: __init__.py  comparison.py
app/services/: __init__.py  sessions.py
app/ui/: controls.py  summary.py
app/utils/: __init__.py  validation.py
cache/2021/2021-12-12_Abu_Dhabi_Grand_Prix/2021-12-10_Practice_1/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-12-12_Abu_Dhabi_Grand_Prix/2021-12-11_Qualifying/: _extended_timing_data.ff1pkl  timing_app_data.ff1pkl
cache/2021/2021-12-12_Abu_Dhabi_Grand_Prix/2021-12-12_Race/: _extended_timing_data.ff1pkl  timing_app_data.ff1pkl
old_db/src/: db_loader.py
sql/: init.sql  postgresql.conf
src/: db_loader.py
