[project]
name = "f1-analysis"
version = "0.1.0"
description = "Formula 1 data analysis using FastF1"
requires-python = ">=3.11,<3.15"
dynamic = ["dependencies"]
authors = [
    { name = "Aymen RHIHIL", email = "aymenrhihilpay@gmail.com" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastf1 = "^3.8.1"
matplotlib = "^3.10.8"
numpy = "^2.4.3"
pandas = "^2.3.3"
seaborn = "^0.13.2"
streamlit = "^1.55.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
jupyter = "^1.1.1"
ipykernel = "^7.2.0"
notebook = "^7.5.5"

[tool.poetry.group.legacy-db]
optional = true

[tool.poetry.group.legacy-db.dependencies]
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
